# my-ai-services-sdk

./: README  pyproject.toml  requirements.txt
my_ai_services_sdk/: _init__.py  gemini_client.py  tts_client.py
src/my_ai_services_sdk/: __init__.py  gemini_client.py  stt_client.py
