[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_ai_services_sdk"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }, # 可以換成你自己的資訊
]
description = "A personal SDK for accessing AI services like Azure and Gemini."
readme = "README.md" # 建議也新增一個 README.md 檔案
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # 假設你用 MIT 授權
    "Operating System :: OS Independent",
]

# 這是最關鍵的部分：告訴 pip 這個套件需要哪些依賴
dependencies = [
    "azure-cognitiveservices-speech",
    "google-generativeai"
]